Base functionality implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=TrainingManager
+storage.trainingType.path=data/trainingTypes.json
+storage.trainees.path=data/trainees.json
+storage.trainers.path=data/trainers.json
+storage.trainings.path=data/trainings.json
