--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-storage.trainingType.path=data/trainingTypes.json
-storage.trainees.path=data/trainees.json
-storage.trainers.path=data/trainers.json
-storage.trainings.path=data/trainings.json
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=${JDBC_URL}
+jdbc.username=${JDBC_USERNAME}
+jdbc.password=${JDBC_PASSWORD}
+
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.import_files=initial-data.sql
+hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+hibernate.format_sql=true
+
+hibernate.packagesToScan=edu.epam.training.manager.domain
